<resources>
    <string name="app_name">DreamHouse</string>
    <string name="login">To proceed enter your \nLogin</string>
    <string name="txt_error">Ops!!!</string>
    <string name="txt_error_msg">Our services are temporarily offline</string>
    <string name="voltar">Back</string>
    <string name="boas_vindas">Welcome!!!</string>
    <string name="user">User.name</string>
    <string name="location_msg">Register your location</string>
    <string name="side_location">My locations</string>
    <string name="titulo">Title</string>
    <string name="inicio_disp">Home Availability</string>
    <string name="fim_disp">end of availability</string>
    <string name="cidade">City</string>
    <string name="bairro">district</string>
    <string name="logradouro">public place</string>
    <string name="cancelar">Cancel</string>
    <string name="local_desc">Enter your location description</string>
    <string name="desc">Description</string>
    <string name="passo01">Step 1 of 4</string>
    <string name="passo02">Step 2 of 4</string>
    <string name="passo03">Step 3 of 4</string>
    <string name="passo04">Step 4 of 4</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="details">Ad details</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sim">yes</string>
    <string name="nao">no</string>
    <string name="edit_profile">Edit profile</string>
    <string name="diaria">Daily availability?</string>
    <string name="semanal">Weekly availability?</string>
    <string name="mensal">Monthly availability?</string>
    <string name="garagem">Do you have a garage?</string>
    <string name="mobilia">Do you have furniture?</string>


    <string name="menu_home">Home</string>
    <string name="meus_anuncios">My Ads</string>
    <string name="favoritos">Favorites</string>
    <string name="edit">Edit Profile</string>
    <string name="help">Help</string>
    <string name="config">Configurations</string>

    <string name="menu_gallery">Galery</string>
    <string name="menu_slideshow">Slide show</string>
    <string name="termos_de_uso">
        "Na Dream House, privacidade e segurança são prioridades e nos comprometemos com a transparência do tratamento de dados pessoais dos nossos usuários/clientes. Por esse motivo, esta presente Política de Privacidade estabelece como é feita a coleta, uso e transferência de informações de clientes ou outras pessoas que acessam ou usam nosso site e aplicativo."

        "Ao utilizar nossos serviços, você entende que coletaremos e usaremos suas informações pessoais nas formas descritas nesta Política, sob as normas da Constituição Federal de 1988 (art. 5º, LXXIX; e o art. 22º, XXX – incluídos pela EC 115/2022), das normas de Proteção de Dados (LGPD, Lei Federal 13.709/2018), das disposições consumeristas da Lei Federal 8078/1990 e as demais normas do ordenamento jurídico brasileiro aplicáveis."

        "Dessa forma, a Dream House, doravante denominada simplesmente como “Dream House”, inscrita no CNPJ/MF sob o nº (nº do 78.357.582/0001-55), no papel de Controladora de Dados, obriga-se ao disposto na presente Política de Privacidade."

        "1. Quais dados coletamos sobre você e para qual finalidade?"
        "Nosso site coleta e utiliza alguns dados pessoais seus, de forma a viabilizar a prestação de serviços e aprimorar a experiência de uso."

        "1.1. Dados pessoais fornecidos pelo titular;"
        "Dado: Nome como finalidade: Login, cadastro na aplicação;"
        "Dado: CPF como finalidade: Validar pessoa fisíca;"
        "Dado: E-mail como finalidade: Login, cadastro na aplicação;"
        "Dado: Endereço como finalidade: Locação do imóvel;"

        "2. Como coletamos os seus dados?"
        "Nesse sentido, a coleta dos seus dados pessoais ocorre da seguinte forma:"

        "Ao se cadastrar/logar em nossa aplicação;"
        "Inserir um imóvel;"
        "Formulário;"

        "2.1. Consentimento"
        "É a partir do seu consentimento que tratamos os seus dados pessoais. O consentimento é a manifestação livre, informada e inequívoca pela qual você autoriza a Dream House a tratar seus dados."

        "Assim, em consonância com a Lei Geral de Proteção de Dados, seus dados só serão coletados, tratados e armazenados mediante prévio e expresso consentimento."

        "O seu consentimento será obtido de forma específica para cada finalidade acima descrita, evidenciando o compromisso de transparência e boa-fé da Dream House para com seus usuários/clientes, seguindo as regulações legislativas pertinentes."

        "Ao utilizar os serviços da Dream House e fornecer seus dados pessoais, você está ciente e consentindo com as disposições desta Política de Privacidade, além de conhecer seus direitos e como exercê-los."

        "A qualquer tempo e sem nenhum custo, você poderá revogar seu consentimento."

        "É importante destacar que a revogação do consentimento para o tratamento dos dados pode implicar a impossibilidade da performance adequada de alguma funcionalidade do site que dependa da operação. Tais consequências serão informadas previamente."

        "3. Quais são os seus direitos?"
        "A Dream House assegura a seus usuários/clientes seus direitos de titular previstos no artigo 18 da Lei Geral de Proteção de Dados. Dessa forma, você pode, de maneira gratuita e a qualquer tempo:"

        "Confirmar a existência de tratamento de dados, de maneira simplificada ou em formato claro e completo."
        "Acessar seus dados, podendo solicitá-los em uma cópia legível sob forma impressa ou por meio eletrônico, seguro e idôneo."
        "Corrigir seus dados, ao solicitar a edição, correção ou atualização destes."
        "Limitar seus dados quando desnecessários, excessivos ou tratados em desconformidade com a legislação através da anonimização, bloqueio ou eliminação."
        "Solicitar a portabilidade de seus dados, através de um relatório de dados cadastrais que a Dream House trata a seu respeito."
        "Eliminar seus dados tratados a partir de seu consentimento, exceto nos casos previstos em lei."
        "Revogar seu consentimento, desautorizando o tratamento de seus dados."
        "Informar-se sobre a possibilidade de não fornecer seu consentimento e sobre as consequências da negativa."

        "QualqueLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.

r pessoa, doravante denominada "Usuário", deverá aceitar este Termo de uso e todas as demais principios que o regem. O aplicativo funcionará apenas nas plataformas Android e WEB."
    </string>

    <string name="desc_anuncio" translatable="false">
"        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
"    </string>

    <string name="cadastre_imagens">Register images</string>
    <string name="dica">Tip: Insert at least one image to proceed with the registration :)</string>
    <string name="termos_uso_login">I agree with the terms of use of Dream House</string>
    <string name="possui_cadastro2">Do you have a register?</string>


    <!-- Cadastro -->
    <string name="nome_completo">Full name</string>
    <string name="email">Email</string>
    <string name="senha">Password</string>
    <string name="cadastrar">Register</string>
    <string name="loginmsg" translatable="false">To proceed, please login</string>
    <string name="possui_cadastro" translatable="false">Do you have a register?</string>
    <string name="faca_login" translatable="false">Sign in</string>
    <string name="loginmsg_en" translatable="false">To proceed, please login</string>

    <string name="logmsg" translatable="false">Don\'t have login?</string>

    <!-- Login -->
    <string name="login_en" translatable="false">Do you have a register? Log in</string>
    <string name="esqueceuSenha_en" translatable="false">Forgot Password?</string>
    <string name="avancar_en" translatable="false">Next</string>
    <string name="semCadastro_en" translatable="false">doesn\'t have registration? Register</string>

    <string name="txt_home" translatable="false">Locações</string>

    <string name="final_cadastro" translatable="false">Finalize register</string>
    <string name="area_trabalho" translatable="false">Do you have a work area?</string>
    <string name="number" translatable="false">Number</string>
    <string name="dormitorios" translatable="false">number of bedrooms</string>
    <string name="toaletes" translatable="false">number of bathrooms</string>
    <string name="categoria" translatable="false">insert the category</string>
    <string name="telefone" translatable="false">Telephone</string>
    <string name="anuncio" translatable="false">Premium Ad?</string>
    <string name="val_mensal" translatable="false">Monthly Value</string>
    <string name="val_diario" translatable="false">Daily Value</string>
    <string name="val_semanal" translatable="false">Weekly Value</string>
    <string name="logout" translatable="false">Logout</string>



</resources>