<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_anuncios"
            android:icon="@drawable/plus"
            android:title="@string/meus_anuncios" />
        <!--
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/star"
            android:title="@string/favoritos" />
        -->

        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/edit"
            android:title="@string/edit" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/config"
            android:title="@string/config" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>