<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_app_bar_home"
        android:name="com.dreamhouse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/app_bar_home" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.dreamhouse.ui.EditProfile_fragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/activity_edit_profile" />


    <fragment
        android:id="@+id/nav_exit"
        android:name="com.dreamhouse.ui.LoginScreen_fragment"
        android:label="Exit"
        tools:layout="@layout/login_screen" />


    <fragment
        android:id="@+id/nav_card_location"
        android:name="com.dreamhouse.ui.CardLocacao_fragment"
        android:label="@string/meus_anuncios"
        tools:layout="@layout/activity_card_locacao" />

</navigation>