<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/default_bakground_app"
    tools:context=".ErrorScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_error"
        android:textSize="30dp"
        android:textFontWeight="900"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     >


        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/error"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:textFontWeight="900"
            android:text="@string/txt_error_msg"
            android:textSize="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/pink_bakground_app"
        android:fontFamily="arial"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:textFontWeight="900" />

</LinearLayout>