<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/default_bakground_app"
    tools:context=".DescriptionLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textFontWeight="600"
            android:text="@string/local_desc"
            android:textSize="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideInset"
                android:lines="10"
                android:background="@drawable/bg_et_base"
                android:hint="@string/desc" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnAvancar"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:backgroundTint="@color/pink_bakground_app"
            android:fontFamily="arial"
            android:text="Proximo Passo"
            android:textColor="@color/white"
            android:textFontWeight="900" />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/pink_bakground_app"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textFontWeight="500"
            android:text="@string/cancelar"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textFontWeight="900"
            android:textSize="15dp"
            android:text="@string/passo04"/>
    </LinearLayout>


</LinearLayout>