<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bakground_app"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisterImage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_back" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="330dp"
            android:src="@drawable/img_logo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/cadastre_imagens"
            android:textAlignment="center"
            android:textFontWeight="300"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:padding="4dp"
                android:src="@drawable/empty" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:padding="4dp"
                android:src="@drawable/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="-75dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:padding="4dp"
                android:src="@drawable/empty" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:padding="4dp"
                android:src="@drawable/empty" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAvancar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="arial"
            android:text="Proximo Passo"
            android:textColor="@color/white"
            android:textFontWeight="900"
            app:backgroundTint="@color/pink_bakground_app" />

        <TextView
            android:id="@+id/txt_facaLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/pink_bakground_app"
            android:textFontWeight="500"
            android:textSize="20dp" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/dica"
            android:textFontWeight="900"
            android:textSize="15dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/passo03"
            android:textAlignment="center"
            android:textFontWeight="900"
            android:textSize="15dp" />


    </LinearLayout>


</LinearLayout>